feat: add brand filter in products page, refactor pagination