@@ -1,8 +1,7 @@
 package com.n3.childrentoyweb.controllers;
 
-import com.n3.childrentoyweb.models.Category;
-import com.n3.childrentoyweb.models.Product;
-import com.n3.childrentoyweb.models.ProductAsset;
+import com.n3.childrentoyweb.dto.ProductListDTO;
+import com.n3.childrentoyweb.services.BrandService;
 import com.n3.childrentoyweb.services.CategoryService;
 import com.n3.childrentoyweb.services.ProductAssetService;
 import com.n3.childrentoyweb.services.ProductService;
@@ -11,52 +10,67 @@ import jakarta.servlet.http.*;
 import jakarta.servlet.annotation.*;
 
 import java.io.IOException;
-import java.util.HashMap;
+import java.util.Arrays;
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
 
 @WebServlet(value = "/products")
 public class ProductListController extends HttpServlet {
     private static final int PAGE_SIZE = 9;
     private ProductService productService;
     private CategoryService categoryService;
+    private BrandService brandService;
     private ProductAssetService productAssetService;
 
     @Override
     public void init() {
         productService = new ProductService();
         categoryService = new CategoryService();
+        brandService = new BrandService();
         productAssetService = new ProductAssetService();
     }
 
     @Override
-    protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+    protected void doGet(HttpServletRequest request, HttpServletResponse response)
+            throws ServletException, IOException {
+
+        HttpSession session = request.getSession();
+
         int page = 1;
-        if(request.getParameter("page") != null){
+        if (request.getParameter("page") != null) {
             page = Integer.parseInt(request.getParameter("page"));
         }
 
-        List<Product> products = productService.findAllByPage(page, PAGE_SIZE);
-        List<Category> categories = categoryService.findAll();
-        List<ProductAsset> productAssets = productAssetService.findAll();
+        String[] brandIdsParam = request.getParameterValues("brandId");
+        List<Integer> brandIds;
 
-        Map<Long, String> categoryMap = categories.stream().collect(Collectors.toMap(Category::getId, Category::getName));
-        Map<Long, List<String>> productAssetMap = productAssets.stream().collect(
-                Collectors.groupingBy(ProductAsset::getProductId,
-                        Collectors.mapping(ProductAsset::getImgPath, Collectors.toList())));
+        if (brandIdsParam != null) {
+            brandIds = Arrays.stream(brandIdsParam)
+                    .map(Integer::parseInt)
+                    .toList();
 
-        int totalItems = productService.countAll();
+            session.setAttribute("selectedBrandIds", brandIds);
+            page = 1;
+        } else {
+            brandIds = (List<Integer>) session.getAttribute("selectedBrandIds");
+        }
+
+
+        List<ProductListDTO> products = productService.findByFilter(brandIds, page, PAGE_SIZE);
+
+        int totalItems = productService.countByFilter(brandIds);
+
         int totalPages = (int) Math.ceil((double) totalItems / PAGE_SIZE);
 
+        // 6. Data chung
         request.setAttribute("products", products);
-        request.setAttribute("categoryMap", categoryMap);
-        request.setAttribute("productAssetMap", productAssetMap);
+        request.setAttribute("brands", brandService.findAll());
+        request.setAttribute("categories", categoryService.findAll());
 
         request.setAttribute("currentPage", page);
         request.setAttribute("totalPages", totalPages);
 
-        request.getRequestDispatcher("/product-list.jsp").forward(request, response);
+        request.getRequestDispatcher("/product-list.jsp")
+                .forward(request, response);
     }
 
     @Override
